hard-gists/3971007/run.log
=== Docker Run Log for 3971007 ===
Started at: Mi 29. Okt 14:07:05 CET 2025

[2025-10-29 14:07:05] START: Running container for 3971007
[2025-10-29 14:07:06] SUCCESS: Container 10e6717386b1eedb99cff61ec843436bb3f2cab087145d91fb33573be6af2cc8 started for 3971007
=== Container logs for 3971007 ===
  File "/snippet.py", line 22
    print pandas.__version__
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3971007 ===
[2025-10-29 14:07:08] INFO: Container 10e6717386b1eedb99cff61ec843436bb3f2cab087145d91fb33573be6af2cc8 has stopped
